--- a/whizapp/templates/whizapp/confirm_template.html
+++ b/whizapp/templates/whizapp/confirm_template.html
@@ -5,6 +5,6 @@
     <title>Password Reset</title>
 </head>
 <body>
-    <a href="http://127.0.0.1:8000{% url 'reset' link %}">Reset Password</a>
+    <a href="https://whizapp.herokuapp.com{% url 'reset' link %}">Reset Password</a>
 </body>
 </html>
