--- a/whizapp/templates/whizapp/post_details.html
+++ b/whizapp/templates/whizapp/post_details.html
@@ -11,10 +11,12 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-info navbar-dark">
             <a class="navbar-brand" href="#">Whiz</a>
+            {% if user.is_authenticated %}
             <form method="post" action="{% url 'logout' %}" id="logout_form" class="ml-auto">
                 {% csrf_token %}
                 <input class="btn btn-block py-2  font-weight-bold" type="submit" value="Logout" style="width: fit-content;color: white;"/>
             </form>
+            {% endif %}
     </nav>
     <div style="margin: 1%;">
         <div id="title" style="border: 1px solid black;padding: 1%;margin: 1% 0%;border-radius: 1%;padding-bottom: 2%;">
