--- a/whizapp/templates/whizapp/post_details.html
+++ b/whizapp/templates/whizapp/post_details.html
@@ -84,7 +84,7 @@
             <button type="submit" class="save btn btn-primary" style="float: right;">Post yout answer</button>
         </form>
         {% else %}
-        <a href="% url 'login' %">Login</a> to Answer this question.
+        <a href="{% url 'login' %}">Login</a> to Answer this question.
         {% endif %}
 
     </div>
