--- a/whizapp/templates/whizapp/home.html
+++ b/whizapp/templates/whizapp/home.html
@@ -54,6 +54,19 @@
                 <div class="" style="float: left;"><br>
                     <input id="images" name="images" type="file" multiple >
                 </div>
+                <label for="sel1">Select Department</label>
+                <select class="form-control" id="sel1" name="sellist1">
+                    <option>CS</option>
+                    <option>IT</option>
+                    <option>EC</option>
+                    <option>EN</option>
+                    <option>EE</option>
+                    <option>CE</option>
+                    <option>ME</option>
+                    <option>MANAGEMENT</option>
+                    <option>PHARMACY</option>
+                    <option>Others</option>
+                </select>
                 <button type="submit" class="save btn btn-primary" style="margin: 1%;float: right;">Submit</button>
             </div>
         </form>
