--- a/whizapp/templates/whizapp/home.html
+++ b/whizapp/templates/whizapp/home.html
@@ -55,7 +55,7 @@
                     <input id="images" name="images" type="file" multiple >
                 </div>
                 <label for="sel1">Select Department</label>
-                <select class="form-control" id="sel1" name="sellist1">
+                <select class="form-control" id="sel1" name="sel1">
                     <option>CS</option>
                     <option>IT</option>
                     <option>EC</option>
