--- a/whizapp/templates/whizapp/post_details.html
+++ b/whizapp/templates/whizapp/post_details.html
@@ -31,7 +31,9 @@
                 {% endfor %}
                 {% endif %}
             </div>
+            <div style='float: right;'>
             <span class="dot" style='height: 10px;width: 10px;background-color: blue;border-radius: 50%;display: inline-block;'></span>{{ post.department }}
+            </div>
         </div>
 <!--        <label for="desc"><h4>Description </h4></label>-->
 <!--        <div id="desc" style="border: 1px solid black;padding: 1%;margin: 1% 0%;border-radius: 1%;">-->
