--- a/whizapp/templates/whizapp/post_details.html
+++ b/whizapp/templates/whizapp/post_details.html
@@ -32,7 +32,7 @@
                 {% endif %}
             </div>
             <div style='float: right;'>
-            <span class="dot" style='height: 10px;width: 10px;background-color: blue;border-radius: 50%;display: inline-block;'></span>{{ post.department }}
+            <span class="dot" style='height: 10px;width: 10px;background-color: blue;border-radius: 50%;display: inline-block;'></span>&nbsp;{{ post.department }}
             </div>
         </div>
 <!--        <label for="desc"><h4>Description </h4></label>-->
