--- a/whizapp/templates/whizapp/home.html
+++ b/whizapp/templates/whizapp/home.html
@@ -55,8 +55,8 @@
                     <input id="images" name="images" type="file" multiple >
                 </div>
                 <br>
-                <label for="sel1">Select Department</label>
                 <select class="form-control" id="sel1" name="sel1">
+                    <option>Select Department</option>
                     <option>CS</option>
                     <option>IT</option>
                     <option>EC</option>
