--- a/whizapp/templates/whizapp/home.html
+++ b/whizapp/templates/whizapp/home.html
@@ -56,7 +56,7 @@
                 </div>
                 <br>
                 <select class="form-control" id="sel1" name="sel1" required>
-                    <option>Select Department</option>
+                    <option value=''>Select Department</option>
                     <option>CS</option>
                     <option>IT</option>
                     <option>EC</option>
