--- a/whizapp/templates/whizapp/answer_template.html
+++ b/whizapp/templates/whizapp/answer_template.html
@@ -5,6 +5,7 @@
     <title>Answer Notification</title>
 </head>
 <body>
+    <h5>Congo! Your question just got answered.</h5>
     <a href="{{ link }}">Watch out what you have been looking for.</a>
 </body>
 </html>
