--- a/whizapp/templates/whizapp/answer_template.html
+++ b/whizapp/templates/whizapp/answer_template.html
@@ -5,7 +5,7 @@
     <title>Answer Notification</title>
 </head>
 <body>
-    <h5>Congo! Your question just got answered.</h5>
-    <a href="{{ link }}">Watch out what you have been looking for.</a>
+    <h4>Congo! Your question just got answered.</h4>
+    <a href="{{ link }}">Watch out</a> what you have been looking for.
 </body>
 </html>
