--- a/whizapp/templates/whizapp/verify_template.html
+++ b/whizapp/templates/whizapp/verify_template.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h4>Welcome to WhizApp. You are just one step away from accessing your account.</h4>
-    <a href="https://whizapp.herokuapp.com/verify{% url 'verify' link %}">Click here</a> to verify your email address.
+    <a href="https://whizapp.herokuapp.com{% url 'verify' link %}">Click here</a> to verify your email address.
 </body>
 </html>
 © 2021 GitHub, Inc.
