--- a/whizapp/templates/whizapp/newsletter.html
+++ b/whizapp/templates/whizapp/newsletter.html
@@ -16,4 +16,28 @@
         {% endfor %}
     </div>
 </body>
+<style>
+    .post {
+    width: 80%;
+    height: 50px;
+    border: 1px solid black;
+    margin: 25px auto;
+    line-height: 50px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 2%;
+}
+
+span {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+    font-size: 20px;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+</style>
 </html>
